--- a/dtm-conf.yml
+++ b/dtm-conf.yml
@@ -1,5 +1,5 @@
 MicroService:
   Driver: 'dtm-driver-ego' # 配置dtm使用go-zero的微服务协议
-  Target: 'etcd:///dtmservice' # 把dtm注册到etcd的这个地址
+  Target: 'etcd:///localhost:2379/dtmservice' # 把dtm注册到etcd的这个地址
   # Target: 'k8s:///dtmservice' # 把dtm注册到k8s的地址
   EndPoint: 'localhost:36790' # dtm的本地地址
